# cryosbi_manifolds

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
data/igg_data/params/: sim_conf.npy  sim_defoc.npy  sim_postm.npy  sim_postw.npy  sim_rot.npy  sim_shift.npy  sim_sigma.npy  sim_snr.npy
scripts/: analysis_ethanol.py  analysis_ethanol_new.py  analysis_hem.py  analysis_igg.py  kl_divergence.py  process_mds_data.py  utils.py  visualize_embeddings.py  visualize_intrinsic_dim.py  visualize_spectrum.py  visualize_tslasso.py
src/cryosbi_manifolds/geometry_analysis/arr/: __init__.py  create.py  utils.py
src/cryosbi_manifolds/geometry_analysis/arr/compress/: de.py  sp.py
src/cryosbi_manifolds/geometry_analysis/arr/index/: index.py  index_len.py  type_guards.py
src/cryosbi_manifolds/geometry_analysis/geometry/: __init__.py  func_of_dist.py  ies.py
src/cryosbi_manifolds/geometry_analysis/io/: database_dir.py  file_io.py
src/cryosbi_manifolds/geometry_analysis/linalg/: covariance.py  local_function.py
src/cryosbi_manifolds/geometry_analysis/sampling/: constants.py
src/cryosbi_manifolds/geometry_analysis/visualization/: colormaps.py
src/geometry_analysis/arr/: arr.py  batch.py  cast.py  modify.py  normalize.py  reduce.py  threshold.py
src/geometry_analysis/arr/compress/: __init__.py
src/geometry_analysis/arr/index/: __init__.py  transforms.py
src/geometry_analysis/geometry/: affinity.py  density.py  distortion.py  extension.py  grad_estimation.py  intrinsic_dim_estimation.py  laplacian.py  riemannian_relaxation.py  rmetric.py  spectral_embedding.py  tslasso.py
src/geometry_analysis/io/: __init__.py  constants.py  database.py  dir_manager.py  file_io.py  utils.py
src/geometry_analysis/linalg/: __init__.py  eigen_decomp.py  tan_space_proj.py  weighted_pca.py
src/geometry_analysis/sampling/: __init__.py  sampling.py
src/geometry_analysis/utils/: __init__.py  dilation.py  grids.py  kl_divergence.py  proj_angle.py  script_utils.py
src/geometry_analysis/visualization/: __init__.py  constants.py  visualization.py
tests/: data.py  test_arr_batch.py  test_arr_compress.py  test_arr_index.py  test_arr_normalize.py  test_arr_reduce.py  test_arr_threshold.py  test_geometry_affinity.py  test_geometry_distortion.py  test_geometry_func_of_dist.py  test_geometry_grad_estimation.py  test_geometry_laplacian.py  test_geometry_riemannian_relaxation.py  test_geometry_rmetric.py  test_geometry_spectral_embedding.py  test_io_file_io.py  test_io_utils.py  test_linalg_covariance.py  test_linalg_tan_space_proj.py  test_linalg_weighted_pca.py  test_utils_dilation.py  test_utils_grids.py  utils.py
writing/: references.bib  todo.md
writing/macros/: commands.tex  mmp-commands.tex  notation.tex
writing/mmp/: module-MMPalgorithms.tex  module-MMPintroML.tex
writing/tutorial/: module-MMPintroML.tex  module-motivation.tex  module-superman.tex  presentation.aux  presentation.bbl  presentation.blg  presentation.fdb_latexmk  presentation.fls  presentation.nav  presentation.out  presentation.snm  presentation.tex  presentation.toc
writing/tutorial/modules/: SBI.tex  artefacts.tex  basics.tex  motivation.tex  superman.tex  validation.tex
