[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cryosbi_manifolds"
version = "1.0.0"
description = ""
requires-python = ">3.12"
authors = [{name = "Octavian-Vlad Murad", email="muradoctavian@gmail.com"}]
readme = "README.md"
license = "MIT"
repository = "https://github.com/ovmurad/cryo_experiments"
classifiers = [
    "Topic :: Scientific/Engineering",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.12"
]
dependencies = [
"jupyter",
"numpy",
"scipy",
"pandas",
"matplotlib",
"seaborn",
"pyamg",
"pytest",
"scikit-learn",
"cython",
"h5py",
"plotly",
"wheel",
"sortedcontainers",
"tqdm",
"mpld3",
"sortednp",
"einops",
"ipykernel"
]
[tool.hatch.build.targets.wheel]
packages = ["src/geometry_analysis"]
