[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cryosbi_manifolds"
version = "1.0.0"
description = ""
requires-python = ">3.12"
authors = [{name = "Octavian-Vlad Murad", email="ovmurad@cs.washington.edu"}]
readme = "README.md"
license = "MIT"
repository = "https://github.com/ovmurad/cryosbi_manifolds"
classifiers = [
    "Topic :: Scientific/Engineering",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.12"
]
dependencies = [
"jupyter",
"numpy",
"scipy",
"pandas",
"matplotlib",
"seaborn",
"pyamg",
"pytest",
"scikit-learn",
"cython",
"h5py",
"plotly",
"wheel",
"sortedcontainers",
"tqdm",
"mpld3",
"sortednp",
"einops",
"ipykernel"
]

[tool.hatch.build.targets.wheel]
packages = ["src/geometry_analysis"]

[tool.poetry]
package-mode = false

[dependency-groups]
dev = [
    "ruff (>=0.14.10,<0.15.0)",
    "mypy (>=1.19.1,<2.0.0)",
    "black (>=25.12.0,<26.0.0)",
    "pytest (>=9.0.2,<10.0.0)"
]