[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "cryosbi_manifolds"
version = "1.0.0"
description = "Manifold Learning suite for SBI"
authors = [{name = "Octavian-Vlad Murad", email = "ovmurad@cs.washington.edu"}]
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "jupyter",
    "numpy",
    "scipy",
    "pandas",
    "matplotlib",
    "seaborn",
    "pyamg",
    "scikit-learn",
    "sortedcontainers",
    "einops",
    "ipykernel",
    "attrs",
]

[project.urls]
repository = "https://github.com/ovmurad/cryosbi_manifolds"

[tool.poetry]
packages = [{ include = "geometry_analysis", from = "src" }]

[tool.poetry.group.dev.dependencies]
ruff = "*"
mypy = "*"
pytest = "*"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
src = ["src"]
line-length = 88
target-version = "py312"
respect-gitignore = true

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = [
    "E501",  # line length handled by formatter
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
files = ["src"]

warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true

disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
strict_equality = true

